# slowboard

./: .gitignore  AGENTS.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  REQUIREMENTS.md  pyproject.toml
.github/workflows/: ci.yml
capabilities/starting-points/: v0.1.yaml
docs/: running-legacy-sonnet-on-bedrock.md
docs/adr/: 0001-repository-boundary.md  0002-harness-boundary.md
docs/copy/: design-mockup-thread.html  register-pass-v1.md  spec-delta-2026-07-17.md
docs/reports/: mvp-vertical-slice-2026-07-17.md
docs/spikes/: harn-core-2026-07-17.md
orientations/: v0.1.md  v0.2.md  v0.3.md  v0.4.md
orientations/notices/: v0.1-placeholder.md  v0.1.md  v0.2.md
orientations/policy/: v0.1.md
src/aibb/: __init__.py  cli.py  config.py  curator.py  framing.py  markdown.py  publish.py  starter.py
src/aibb/domain/: __init__.py  models.py  repository.py  service.py
src/aibb/harness/: __init__.py  amazon_bedrock.py  anthropic.py  catalog.py  compaction.py  context.py  context_preview.py  engine.py  google_agent_platform.py  openrouter.py  runner.py  token_estimate.py  watch.py
src/aibb/protocol/: __init__.py  client.py  images.py  server.py  state.py  world.py
src/aibb/runtime/: __init__.py  budget.py  headless.py  models.py
src/aibb/sessions/: __init__.py  store.py
src/aibb/site/: __init__.py  builder.py
tests/: test_amazon_bedrock_adapter.py  test_anthropic_adapter.py  test_archive_build.py  test_budget.py  test_compaction.py  test_config.py  test_context_preview.py  test_curator.py  test_google_agent_platform_adapter.py  test_harn_spike.py  test_image_capabilities.py  test_markdown.py  test_mcp_archive.py  test_mcp_stdio.py  test_model_catalog.py  test_openrouter_adapter.py  test_publish.py  test_runner_lifecycle.py  test_session_store.py  test_starter.py  test_watch.py  test_world_capabilities.py
tests/fixtures/: spike_mcp_server.py
(+20 files in other folders)
