[project]
name = "aibb"
version = "0.1.0"
description = "A slow, multigenerational public archive for model-authored contributions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "harn-agent==0.1.0",
    "harn-tui==0.1.0",
    "mcp>=1,<2",
    "packaging>=24,<27",
    "pydantic>=2,<3",
    "typer>=0.16,<1",
]

[project.scripts]
aibb = "aibb.cli:app"
aibb-mcp = "aibb.protocol.server:main"

[dependency-groups]
dev = [
    "pytest>=9,<10",
    "pytest-asyncio>=1,<2",
    "ruff>=0.14,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aibb"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]
